# Texodus

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml
scripts/: bump-version.mjs
src/: App.vue  main.ts  shims-vue.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.vue  ColorSchemePicker.vue  DocumentStatsMenu.vue  EditorLayout.vue  FormatMenu.vue  KeyboardShortcuts.vue  MarkdownPreview.vue  QuickOpenPalette.vue  SearchBar.vue  SettingsDialog.vue  SettingsMenu.vue  SettingsStepper.vue  Sidebar.vue  SidebarContextMenu.vue  SidebarNamePrompt.vue  TabBar.vue  TextEditor.vue  ThemeProvider.vue  TitleBar.vue  Toolbar.vue  UnsavedChangesDialog.vue
src/composables/: useAppMenu.ts  useAutoSave.test.ts  useAutoSave.ts  useCodeMirror.test.ts  useCodeMirror.ts  useDocumentSearch.test.ts  useDocumentSearch.ts  useFileWatch.ts  useFormatting.ts  useMarkdownPreview.ts  useQuickOpen.ts  useSessionRestore.ts  useSidebarDragDrop.ts  useSystemFonts.ts  useUnsavedPrompt.ts  useWorkspaceWatch.test.ts  useWorkspaceWatch.ts
src/mock-tauri/: index.test.ts  index.ts
src/services/: documentStats.test.ts  documentStats.ts  exportService.test.ts  exportService.ts  fileService.test.ts  fileService.ts  markdownSanitizer.test.ts  markdownSanitizer.ts  mermaidRenderer.ts  prismHighlighter.test.ts  prismHighlighter.ts  workspaceFileOperations.test.ts  workspaceFileOperations.ts  workspaceService.test.ts  workspaceService.ts
src/stores/: editor.ts  settings.ts  workspace.ts
(+16 files in other folders)
