[package]
name = "texodus"
version = "4.1.0"
description = "Texodus is a modern, fast, and beautiful Markdown viewer and editor"
authors = ["Nick"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "texodus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
# Persists runtime-granted fs/asset scopes (dialog picks) across restarts —
# required now that remove/rename/mkdir have no static scope: "Open Last
# Folder" and recent files must keep the grants from the original dialog pick.
# `protocol-asset` also persists asset-protocol grants (local image rendering).
tauri-plugin-persisted-scope = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.23"

# Forwards argv from a second launch (e.g. double-clicking a .md while the app
# is already running) into the existing instance. Desktop-only.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

